.metadata/.plugins/org.eclipse.cdt.ui/global-build.log

**** Build of configuration Debug for project example04 ****

"C:\\ti\\ccsv7\\utils\\bin\\gmake" -k -j 8 all -O 
'Building file: ../queue.c'
'Invoking: GNU Compiler'
"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -c -mcpu=cortex-m4 -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DPART_TM4C123GH6PM -I"C:/Users/cykim/Desktop/embedded programming/example04" -I"C:/Users/cykim/Desktop/embedded programming/CMSIS/Include" -I"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/arm-none-eabi/include" -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -MMD -MP -MF"queue.d" -MT"queue.o" -o"queue.o"  "../queue.c"
'Finished building: ../queue.c'
' '
'Building file: ../main.c'
'Invoking: GNU Compiler'
"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -c -mcpu=cortex-m4 -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DPART_TM4C123GH6PM -I"C:/Users/cykim/Desktop/embedded programming/example04" -I"C:/Users/cykim/Desktop/embedded programming/CMSIS/Include" -I"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/arm-none-eabi/include" -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -MMD -MP -MF"main.d" -MT"main.o" -o"main.o"  "../main.c"
'Finished building: ../main.c'
' '
'Building target: example04.out'
'Invoking: GNU Linker'
"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -DPART_TM4C123GH6PM -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -Wl,-Map,"example04.map" --entry ResetISR -o"example04.out" "./main.o" "./queue.o" "./serial.o" "./tm4c123gh6pm_startup_ccs_gcc.o" -Wl,-T"../tm4c123gh6pm.lds"  -Wl,--start-group -lc -Wl,--end-group 
'Finished building target: example04.out'
' '

**** Build Finished ****

**** Build of configuration Debug for project example04 ****

"C:\\ti\\ccsv7\\utils\\bin\\gmake" -k -j 8 all -O 
gmake[1]: 'example04.out' is up to date.

**** Build Finished ****

**** Build of configuration Debug for project example04 ****

"C:\\ti\\ccsv7\\utils\\bin\\gmake" -k -j 8 all -O 
'Building file: ../main.c'
'Invoking: GNU Compiler'
"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -c -mcpu=cortex-m4 -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DPART_TM4C123GH6PM -I"C:/Users/cykim/Desktop/embedded programming/example04" -I"C:/Users/cykim/Desktop/embedded programming/CMSIS/Include" -I"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/arm-none-eabi/include" -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -MMD -MP -MF"main.d" -MT"main.o" -o"main.o"  "../main.c"
subdir_rules.mk:9: recipe for target 'main.o' failed
../main.c: In function 'main':
../main.c:23:19: error: 'i' undeclared (first use in this function)
              for (i = 0; i < 3; i++)
                   ^
../main.c:23:19: note: each undeclared identifier is reported only once for each function it appears in
gmake: *** [main.o] Error 1
gmake: Target 'all' not remade because of errors.

**** Build Finished ****

**** Build of configuration Debug for project example04 ****

"C:\\ti\\ccsv7\\utils\\bin\\gmake" -k -j 8 all -O 
'Building file: ../main.c'
'Invoking: GNU Compiler'
"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -c -mcpu=cortex-m4 -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DPART_TM4C123GH6PM -I"C:/Users/cykim/Desktop/embedded programming/example04" -I"C:/Users/cykim/Desktop/embedded programming/CMSIS/Include" -I"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/arm-none-eabi/include" -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -MMD -MP -MF"main.d" -MT"main.o" -o"main.o"  "../main.c"
'Finished building: ../main.c'
' '
'Building target: example04.out'
'Invoking: GNU Linker'
"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -DPART_TM4C123GH6PM -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -Wl,-Map,"example04.map" --entry ResetISR -o"example04.out" "./main.o" "./queue.o" "./serial.o" "./tm4c123gh6pm_startup_ccs_gcc.o" -Wl,-T"../tm4c123gh6pm.lds"  -Wl,--start-group -lc -Wl,--end-group 
'Finished building target: example04.out'
' '

**** Build Finished ****

**** Build of configuration Debug for project example04 ****

"C:\\ti\\ccsv7\\utils\\bin\\gmake" -k -j 8 all -O 
'Building file: ../main.c'
'Invoking: GNU Compiler'
"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -c -mcpu=cortex-m4 -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DPART_TM4C123GH6PM -I"C:/Users/cykim/Desktop/embedded programming/example04" -I"C:/Users/cykim/Desktop/embedded programming/CMSIS/Include" -I"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/arm-none-eabi/include" -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -MMD -MP -MF"main.d" -MT"main.o" -o"main.o"  "../main.c"
'Finished building: ../main.c'
' '
'Building target: example04.out'
'Invoking: GNU Linker'
"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -DPART_TM4C123GH6PM -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -Wl,-Map,"example04.map" --entry ResetISR -o"example04.out" "./main.o" "./queue.o" "./serial.o" "./tm4c123gh6pm_startup_ccs_gcc.o" -Wl,-T"../tm4c123gh6pm.lds"  -Wl,--start-group -lc -Wl,--end-group 
'Finished building target: example04.out'
' '

**** Build Finished ****
